--- a/gravatar-quickeditor/src/main/res/drawable/gravatar_avatar_more_options_alt_text.xml
+++ b/gravatar-quickeditor/src/main/res/drawable/gravatar_avatar_more_options_alt_text.xml
@@ -1,6 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
     android:height="24dp"
+    tools:ignore="UnusedResources"
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
